# ai_technical_challenge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  airlines.py  config.py  eval.py  ingest.py  llm.py  prompt.py  rag.py  schemas.py  server.py  telemetry.py
app/api/: schemas.py  server.py
app/components/: llm.py  vector_store.py
app/core/: config.py  telemetry.py
app/evaluation/: eval.py
app/services/: ingest.py  prompt.py  rag.py
app/templates/: index.html
docs/: analysis.md  architecture.md  challenge.md  langfuse.md  python_guidelines.md  tasks.md
docs/evals/: questions.jsonl
tests/: test_eval_harness.py  test_ingest_loaders.py  test_llm_prompt.py  test_rag.py  test_server.py  test_vector_store.py
