[project]
name = "ai-technical-challenge"
version = "0.1.0"
description = "LLM Airline Policy App for airline policy Q&A with RAG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
extend-ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
